Further css fixes on firefox

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,7 @@
 #App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: 100vh;
   width: 100vw;
   text-align: -webkit-center;
@@ -9,6 +12,10 @@
 
 .fa-snowflake {
   width: 1000px;
+}
+
+#display-weather-wrapper__current-weather {
+  text-align: center;
 }
 
 .detail {
@@ -78,6 +85,7 @@
   place-content: space-evenly;
   height: 65%;
   width: 90%;
+  text-align: center;
 }
 
 #display-weather-wrapper__degrees-wrapper {
